--- a/views/common/navbar.pug
+++ b/views/common/navbar.pug
@@ -1,17 +1,17 @@
 mixin navbar(user)
   nav.navbar.navbar-expand.navbar-light.bg-light
     a(href="/", aria-label="Golden Goose").navbar-brand.mr-0.mr-md-2
-      img(src="/public/images/golden-goose.svg", width="36", height="36")
-.collapse.navbar-collapse
+      img(src="/images/golden-goose.svg", width="36", height="36")
+    .collapse.navbar-collapse
       ul.navbar-nav.mr-auto
         li.nav-item
           a.nav-link(href="/") Home
         li.nav-item
           a.nav-link(href="/leads") Leads
-.navbar-right
-if user
+    .navbar-right
+      if user
         span.navbar-text Hello #{user.email}!
-.navbar-right
+    .navbar-right
       ul.navbar-nav.mr-auto
         li.nav-item
           a.nav-link(href="/signup") Sign up
